--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -26,7 +26,7 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "fibers": "4.0.2",
+    "fibers": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "jquery": "^3.4.1",
@@ -36,8 +36,8 @@
     "node-gyp": "^6.1.0",
     "postcss-cli": "^7.1.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
     "react-cookie": "^4.0.1",
+    "react-dom": "16.12.0",
     "react-jss": "^10.0.3",
     "react-redux": "^7.1.3",
     "react-stomp": "^4.3.0",
@@ -73,13 +73,14 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "resolve-url-loader": "^3.1.1",
-    "sass": "^1.24.4",
-    "sass-loader": "^8.0.0",
+    "sass": "1.22.10",
+    "sass-loader": "7.2.0",
     "style-loader": "^1.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "websocket": "^1.0.31"
   }
 }
