--- a/wishDream_Web/.babelrc
+++ b/wishDream_Web/.babelrc
@@ -3,11 +3,11 @@
     [ "@babel/preset-env",
       {
         "useBuiltIns": "usage",
-        corejs:  {
-            version: 3,
-            proposals: true
-        },
-      },
+        "corejs":  {
+            "version": 3,
+            "proposals": true
+        }
+      }
     ],
     "@babel/react"
   ],
