--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -9,13 +9,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
-    "sugarss": "2.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "postcss": "^7.0.26",
     "clsx": "^1.0.4",
     "fibers": "~4.0.1",
     "jquery": "^3.4.1",
     "node-gyp": "^6.1.0",
+    "postcss": "^7.0.26",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
@@ -24,61 +23,61 @@
     "react-stomp": "^4.3.0",
     "redux": "^4.0.5",
     "redux-form": "^8.2.6",
-    "websocket": "^1.0.31"
+    "sugarss": "2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-pipeline-operator": "^7.7.7",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-runtime": "^7.7.7",
-    "@babel/register": "^7.7.7",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-proposal-pipeline-operator": "^7.7.7",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/plugin-syntax-jsx": "^7.7.4",
     "@babel/plugin-transform-arrow-functions": "^7.7.4",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
-    "core-js": "3.6.2",
+    "@babel/register": "^7.7.7",
     "@material-ui/core": "~4.6.1",
     "@material-ui/icons": "~4.5.1",
     "@material-ui/styles": "~4.6.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "core-js": "3.6.2",
+    "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
-    "eslint": "^6.8.0",
+    "directory-named-webpack-plugin": "^4.0.1",
     "es-abstract": "^1.16.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^5.0.2",
-    "postcss-cli": "^7.1.0",
-    "gulp-cli": "^2.2.0",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.0",
     "gulp-eslint": "^6.0.0",
-    "media-query-plugin": "^1.3.1",
     "html-webpack-plugin": "^4.0.0-beta.8",
-    "mini-css-extract-plugin": "~0.8.0",
     "material-ui-popup-state": "^1.5.1",
-    "directory-named-webpack-plugin": "^4.0.1",
+    "media-query-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "~0.8.0",
+    "node-sass": "4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "css-loader": "^3.4.2",
-    "postcss-loader": "^3.0.0",
-    "postcss-load-config": "^2.1.0",
-    "postcss-plugin": "^1.0.0",
+    "postcss-cli": "^7.1.0",
     "postcss-import": "^12.0.1",
+    "postcss-load-config": "^2.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-plugin": "^1.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "resolve-url-loader": "^3.1.1",
     "sass": "1.22.10",
-    "node-sass": "4.12.0",
     "sass-loader": "7.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
